# dithery

./: CMakeLists.txt  README.md  dither.cpp  dither.h  ditherType.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
